# Skill-Guard

./: .env.example  .gitignore  CONTRIBUTING.md  INTEGRATION_SUMMARY.md  LICENSE  Makefile  QUICKSTART.md  README.md  SECURITY.md  pyproject.toml
data/: .gitkeep  dataset_summary.json
data/benign/calculator_0001/: SKILL.md  main.py  metadata.json
data/benign/calculator_0067/: SKILL.md  main.py  metadata.json
data/benign/calculator_0088/: SKILL.md  metadata.json
data/benign/calculator_0094/: SKILL.md  metadata.json
data/benign/calculator_0114/: SKILL.md  metadata.json
data/benign/calculator_0120/: SKILL.md  main.py  metadata.json
data/benign/calculator_0200/: SKILL.md  metadata.json
data/benign/calculator_0227/: SKILL.md  metadata.json
data/benign/calculator_0247/: SKILL.md  main.py  metadata.json
data/benign/calculator_0259/: SKILL.md  main.py  metadata.json
data/benign/calculator_0289/: SKILL.md  main.py  metadata.json
data/benign/calculator_0343/: SKILL.md  main.py  metadata.json
data/benign/calculator_0347/: SKILL.md  metadata.json
data/benign/calculator_0390/: SKILL.md  metadata.json
data/benign/calculator_0423/: SKILL.md  metadata.json
data/benign/calculator_0434/: SKILL.md  metadata.json
data/benign/calculator_0463/: SKILL.md  metadata.json
data/benign/calculator_0588/: SKILL.md  metadata.json
data/benign/calculator_0600/: SKILL.md  metadata.json
data/benign/calculator_0628/: SKILL.md  metadata.json
data/benign/calculator_0781/: SKILL.md  metadata.json
data/benign/calculator_0789/: SKILL.md  main.py  metadata.json
data/benign/calculator_0791/: SKILL.md  metadata.json
data/benign/calculator_fast_0017/: SKILL.md  main.py  metadata.json
data/benign/calculator_fast_0026/: SKILL.md  metadata.json
data/benign/calculator_fast_0035/: SKILL.md  main.py  metadata.json
data/benign/calculator_fast_0049/: SKILL.md  main.py  metadata.json
data/benign/calculator_fast_0262/: SKILL.md  metadata.json
data/benign/calculator_fast_0319/: SKILL.md  main.py  metadata.json
data/benign/calculator_fast_0417/: SKILL.md  metadata.json
data/benign/calculator_fast_0679/: SKILL.md  metadata.json
data/benign/calculator_fast_0709/: SKILL.md  main.py  metadata.json
data/benign/calculator_lite_0040/: SKILL.md  main.py  metadata.json
data/benign/calculator_lite_0055/: SKILL.md  metadata.json
data/benign/calculator_lite_0072/: SKILL.md  metadata.json
data/benign/calculator_lite_0075/: SKILL.md  metadata.json
data/benign/calculator_lite_0180/: SKILL.md  metadata.json
data/benign/calculator_lite_0243/: SKILL.md  metadata.json
data/benign/calculator_lite_0317/: SKILL.md  main.py  metadata.json
data/benign/calculator_lite_0360/: SKILL.md  metadata.json
data/benign/calculator_lite_0365/: SKILL.md  metadata.json
data/benign/calculator_lite_0366/: SKILL.md  metadata.json
data/benign/calculator_lite_0384/: SKILL.md  metadata.json
data/benign/calculator_lite_0437/: SKILL.md  main.py  metadata.json
data/benign/calculator_lite_0447/: SKILL.md  main.py  metadata.json
data/benign/calculator_lite_0459/: SKILL.md  main.py  metadata.json
data/benign/calculator_lite_0465/: SKILL.md  main.py  metadata.json
data/benign/calculator_lite_0549/: SKILL.md  metadata.json
data/benign/calculator_lite_0605/: SKILL.md  metadata.json
data/benign/calculator_lite_0635/: SKILL.md  metadata.json
data/benign/calculator_lite_0643/: SKILL.md  metadata.json
data/benign/calculator_lite_0656/: SKILL.md  metadata.json
data/benign/calculator_lite_0662/: SKILL.md  main.py  metadata.json
docs/: dataset_format.md  integration_plan.md  llm_audit.md  sifa.md  threat_model.md
experiments/: __init__.py  ablation_study.py
paper/: references.bib  skillguard_paper.tex
scripts/: collect_dataset.py  demo.py  generate_dataset.py  generate_figures.py  generate_synthetic_data.py  run_pipeline.py  train.py  visualize.py
src/skillguard/: __init__.py  cli.py  config.py  taxonomy.py
tests/: conftest.py  test_hybrid.py  test_sifa.py  test_skill.py
(+2241 files in other folders)
